--- a/css/sobre.css
+++ b/css/sobre.css
@@ -44,6 +44,10 @@ h6{
 	text-align: center;
 }
 
+a {
+    border-radius: 10px;
+}
+
 footer { background-color: black; min-height: 90px; color:#999; padding:20px;}
 
 nav{min-height:90px; margin-bottom:0 !important;}
