--- a/css/dicas.css
+++ b/css/dicas.css
@@ -1,5 +1,5 @@
 ul{
-	padding: 0px 40px 0px 40px;
+	padding: 0px 40px 0px 60px;
 	font-family: "Montserrat",sans-serif;
 	font-size:15px;
 	text-align: justify;
@@ -15,7 +15,7 @@ p{
 	font-family: "Montserrat",sans-serif;
 	text-align: justify;
 	/* text-shadow: 1px 1px 1px #111111; */
-	line-height: 26px; /*tamanho da altura de cada linha */
+	line-height: 26px; tamanho da altura de cada linha
   	letter-spacing: 0px; /*tamanho do espaço entre cada letra */
 	word-spacing: 0px;    /* tamanho do espaço entre cada palavra */
 	padding: 0px 40px 0px 40px;
@@ -44,7 +44,7 @@ h3{
 h4{
 	color:w333333;
 	text-align:left;
-	margin:0px 0px 50px 0px;
+	margin:0px 0px 35px 0px;
 	padding: 0px 40px 0px 40px;
 }
 
