--- a/css/dicas.css
+++ b/css/dicas.css
@@ -97,8 +97,9 @@ legend{color:white;}
 
 .efeito{
 	background-color: #fff;
-	padding:50px 0 50px 0;
+	padding:50px 0px 50px 0px;
 	border-radius: 50px;
+	width: 101%;
 }
 
 .link_menu{margin-top:50px;
@@ -116,7 +117,7 @@ legend{color:white;}
 	background-color: #F2f2f2;
 	min-height: 00px;
 	background-size:50%;
-	padding:50px ;
+	padding:30px ;
 
 }
 #logo{
