--- a/css/apartamento.css
+++ b/css/apartamento.css
@@ -62,6 +62,10 @@ p{
 	padding: 0px 40px 0px 40px;
 }
 
+figure{
+	text-align: left;
+	padding: 0px 40px 0px 40px;
+}
 
 footer { 
 	background-color: black; 
@@ -110,11 +114,4 @@ legend{color:white;}
 	background-size:50%;
 	padding:50px ;
 
-}
-#direita{
-	float: right;
-}
-
-#esquerda{
-	float: left;
 }
