--- a/css/ibama.css
+++ b/css/ibama.css
@@ -70,11 +70,11 @@ h6{
 	font-size:15px;
 	text-align: justify;
 }
-
+ */
 
 ul{
-	padding: 0px 40px 0px 40px;
-} */
+	margin: 0px 40px 0px 40px;
+}
 
 footer { 
 	background-color: black; 
@@ -140,9 +140,11 @@ legend{
 }
 
 #direita{
-	float: right;
+	text-align: left;
+	margin: 0px 40px 0px 40px;
 }
 
 #esquerda{
-	float: left;
+	text-align: left;
+	margin: 0px 40px 0px 40px;
 }
